# Pcap_Analysis_Scripts

./: Pcap_Analyzer_Guide.md  README.md  nmapoutput.txt  pcap_analyzer.py  pcap_attack_detector.py  pcapng_analyzer.py  pyproject.toml  requirements-dev.txt  requirements.txt
pcap_analysis/: cli.py  main.py
pcap_analysis/analysis/: anomalies.py  basic.py  http_responses.py  parallel.py  patterns.py  protocol.py
pcap_analysis/core/: command.py  config.py  dependencies.py  errors.py  logging_config.py  platform.py  security.py  utils.py
pcap_analysis/detection/: malware.py  network.py  web.py
pcap_analysis/reporting/: accessibility.py  formatter.py
pcap_analysis/threat_intelligence/: ioc.py
tests/: conftest.py  test_analysis.py  test_core.py  test_detection.py  test_reporting.py
